--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+---
+layout: home
+author_profile: true
+classes: wide
+---
+
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Grad-CAM: Why did you say that? Visual Explanations from Deep Networks via Gradient-based Localization</title><style>
 /* webkit printing magic: print all background colors */
 html {
