--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 ---
-layout: compress
+layout: page
 ---
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Sangyeop Kim</title><style>
 /* webkit printing magic: print all background colors */
