--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,8 @@
 ---
 layout: page
+title: Tag Archive
+description: "An archive of posts sorted by tag."
+comments: false
 ---
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Sangyeop Kim</title><style>
 /* webkit printing magic: print all background colors */
