--- a/about/index.html
+++ b/about/index.html
@@ -1,10 +1,11 @@
 ---
 layout: page
-title: Tag Archive
+title: Sangyeop kim
 description: "An archive of posts sorted by tag."
 comments: false
 ---
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Sangyeop Kim</title><style>
+
+<body><style>
 /* webkit printing magic: print all background colors */
 html {
 	-webkit-print-color-adjust: exact;
@@ -634,7 +635,8 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style><img class="page-cover-image" src="Sangyeop%20Kim%20ad541433fc6142a5b7ae4a5e4235d2c8/1760835.jpg" style="object-position:center 50%;max-height:300px;max-width:2000px;margin-left:-235px;"/></head><body><article id="ad541433-fc61-42a5-b7ae-4a5e4235d2c8" class="page sans"><header><div class="page-header-icon page-header-icon-with-cover"><span class="icon">👨‍🎓</span></div><h1 class="page-title">Sangyeop Kim</h1></header><div class="page-body"><hr id="73b13924-cef0-49fd-9f28-141f7158422d"/><p id="bd2959d5-02dc-4d5c-a49f-ba347c593426" class="">👨‍🎓 B.S. Industrial Engineering, Seoul Nat&#x27;l Univ., 2013 ~ 2019</p><p id="164ce5ad-7d01-4400-bf7e-95af985b397b" class="">👨‍🎓 M.S. <a href="http://dm.snu.ac.kr">Data mining labs</a>, Industrial Engineering, Seoul Nat&#x27;l Univ., 2019 ~</p><p id="89ef8805-d0ef-4391-bfec-02cdb70eb001" class="">🚀 Data scientist, <a href="http://rtm.ai">RTM</a> 2020 ~</p><figure class="block-color-gray_background callout" style="white-space:pre-wrap;display:flex" id="f9502b7b-1d07-491c-99b0-7475d8e055ef"><div style="font-size:1.5em"><span class="icon">😍</span></div><div style="width:100%">Areas Of Interest : Smart factory, Interpretable model, computer vision</div></figure><p id="0100e262-111b-4da9-8913-49d5f8243e39" class="">
+</style>
+<article id="ad541433-fc61-42a5-b7ae-4a5e4235d2c8" class="page sans"><div class="page-body"><hr id="73b13924-cef0-49fd-9f28-141f7158422d"/><p id="bd2959d5-02dc-4d5c-a49f-ba347c593426" class="">👨‍🎓 B.S. Industrial Engineering, Seoul Nat&#x27;l Univ., 2013 ~ 2019</p><p id="164ce5ad-7d01-4400-bf7e-95af985b397b" class="">👨‍🎓 M.S. <a href="http://dm.snu.ac.kr">Data mining labs</a>, Industrial Engineering, Seoul Nat&#x27;l Univ., 2019 ~</p><p id="89ef8805-d0ef-4391-bfec-02cdb70eb001" class="">🚀 Data scientist, <a href="http://rtm.ai">RTM</a> 2020 ~</p><figure class="block-color-gray_background callout" style="white-space:pre-wrap;display:flex" id="f9502b7b-1d07-491c-99b0-7475d8e055ef"><div style="font-size:1.5em"><span class="icon">😍</span></div><div style="width:100%">Areas Of Interest : Smart factory, Interpretable model, computer vision</div></figure><p id="0100e262-111b-4da9-8913-49d5f8243e39" class="">
 </p><h2 id="2f7c9f6e-2bf3-4187-9040-e3d0f2748c11" class="">Project &amp; Experience</h2><ul id="9d742623-daa7-43bf-88c8-ebbbe8df2450" class="bulleted-list"><li>삼성전자, 기계학습을 활용한 데이터 기반 진단, 고장예지 및 내구성평가 기술 연구,  2019.07 ~ 2020.07</li></ul><ul id="590b76da-91d4-4318-8c64-6187b60764a3" class="bulleted-list"><li>현대NGV, 예방품질능력 강화 위한 컨버터 지능형 진단 기술 개발,  2019.07 ~ 2020.05</li></ul><ul id="b0ff6963-e4ea-4ad6-9c68-d8762663b033" class="bulleted-list"><li>PSK, 공장 제어를 위한 SPEC 관리 platform, 공정 이상감지 Platform 구축,  2020.04 ~</li></ul><hr id="6d0124a0-d132-470d-8d71-c4ccf7b996c3"/><p id="4d1d9a40-c9d5-47b4-ab1d-495c276db27c" class="">
 </p><h2 id="e16dc996-a672-404f-ad89-474ffd789e1b" class="">Teaching</h2><ul id="0ba3c201-f625-4a7d-a847-10106d31e93b" class="bulleted-list"><li>Data Mining Lab, Seoul Nat&#x27;l Univ, 수업 조교,  2019.03 ~ 2020.08</li></ul><ul id="cb757aad-366e-4c55-9235-467f8ea88773" class="bulleted-list"><li>하나은행 AI 교육 조교,  2019.07 ~ 2019.08</li></ul><ul id="61c7cf26-a309-4aea-bcdf-cc39b0d83780" class="bulleted-list"><li>LG U+ AI 교육 조교,  2020.07 ~ 2020.07</li></ul><hr id="935ca3fc-12b2-4114-a4a9-2b9e851d11fb"/><p id="9da275a9-a5cc-4717-a9f8-490eaa76c561" class="">
 </p><h2 id="dd68afa2-2705-4b20-993a-120694b8d108" class="">✨Contents </h2><figure id="5d2bc098-0a92-4d54-96a7-479bfa198bbd" class="link-to-page"><a href="https://www.notion.so/Paper-review-5d2bc0980a924d5496a7479bfa198bbd"><span class="icon">📜</span>Paper review</a></figure><figure id="dc0ba022-d84c-462c-89cd-6d698d8d6818" class="link-to-page"><a href="https://www.notion.so/Blog-dc0ba022d84c462c89cd6d698d8d6818"><span class="icon">🤩</span>Blog</a></figure><hr id="8f241d12-b5a0-49d6-9130-2668e5d19c16"/><p id="29bad8a0-2478-45cd-9d49-017c098b804e" class="">
