--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Sangyeop kim
-description: "An archive of posts sorted by tag."
 comments: false
+about: true
 ---
 
 <body><style>
