first post upload test

--- a/_posts/2019-05-21-asd.html
+++ b/_posts/2019-05-21-asd.html
@@ -2,8 +2,8 @@
 layout: post
 title:  "asd"
 date:   2016-04-06
-excerpt: "Minimal, one column Jekyll theme for your blog."
-project: true
+excerpt: "123Minimal, one column Jekyll theme for your blog."
+blog: true
 tag:
 - jekyll 
 - moon
