--- a/_posts/2020-8-5-Learning Deep Features for Discriminative Localization.html
+++ b/_posts/2020-8-5-Learning Deep Features for Discriminative Localization.html
@@ -6,7 +6,7 @@ excerpt: ""
 tags: [Object detection, image]
 blog: false
 feature: ./assets/img/Learning%20Deep%20Features%20for%20Discriminative%20Localiza%20ffd1c68765ed4459900888d809ecdf7e/cam.png 
-comment: true
+comments: true
 ---
 
 
