first post upload test

--- a/_posts/2019-05-21-asd.html
+++ b/_posts/2019-05-21-asd.html
@@ -2,14 +2,9 @@
 layout: post
 title:  "asd123"
 date:   2016-04-06
-excerpt: "123Minimal, one column Jekyll theme for your blog."
+excerpt: "Minimal, one column Jekyll theme for your blog."
 blog: true
-tag:
-- jekyll 
-- moon
-- blog
-- about
-- theme
+tags: [jekyll, moon]
 comments: true
 ---
 
