--- a/_posts/2019-05-21-asd.html
+++ b/_posts/2019-05-21-asd.html
@@ -5,6 +5,7 @@ date:   2016-04-06
 excerpt: "Minimal, one column Jekyll theme for your blog."
 blog: true
 tags: [jekyll, moon]
+feature: ./assets/img/Learning%20Deep%20Features%20for%20Discriminative%20Localiza%20ffd1c68765ed4459900888d809ecdf7e/cam.png
 comments: true
 ---
 
