--- a/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
+++ b/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Learning Deep Features for Discriminative Localization"
-date:   2016-04-06
-excerpt: "Minimal, one column Jekyll theme for your blog."
+title:  "localization"
+date:   2019-12-06
+excerpt: "Minimas23fsdfal, one column Jekyll theme for your blog."
 blog: false
 tags: [jekyll, moon]
 feature: ./assets/img/Learning%20Deep%20Features%20for%20Discriminative%20Localiza%20ffd1c68765ed4459900888d809ecdf7e/cam.png
