--- a/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
+++ b/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
@@ -1,17 +1,25 @@
 ---
 layout: post
-title:  "localization"
+title:  "Moon Jekyll Theme"
 date:   2016-04-06
 excerpt: "123asdasdasd"
-project: true
-tag:
-- jekyll 
-- moon
-- blog
-- about
-- theme
+blog: true
+tags: [asd, zxc]
 comments: true
 ---
+
+/*---
+layout: post
+title:  "localization"
+date:   2016-04-06
+excerpt: "Minimal, one column Jekyll theme for your blog."
+blog: false
+tags: [jekyll, moon]
+feature: ./assets/img/Learning%20Deep%20Features%20for%20Discriminative%20Localiza%20ffd1c68765ed4459900888d809ecdf7e/cam.png
+comments: true
+---*/
+
+
 
 
 <style>
