--- a/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
+++ b/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
@@ -1,15 +1,13 @@
 ---
 layout: post
-title:  "localization111"
-date:   2016-04-06
-excerpt: "Minimal, one column Jekyll theme for your blog."
+title: "Learning Deep Features for Discriminative Localization"
+date:   2020-8-5
+excerpt: ""
+tags: [Object detection, image]
 blog: false
-tags: [jekyll, moon]
-feature: ../assets/img/Learning%20Deep%20Features%20for%20Discriminative%20Localiza%20ffd1c68765ed4459900888d809ecdf7e/cam.png
+feature: "./assets/img/Learning%20Deep%20Features%20for%20Discriminative%20Localiza%20ffd1c68765ed4459900888d809ecdf7e/cam.png" 
 comments: true
 ---
-
-
 
 
 <style>
