--- a/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
+++ b/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "local123asdzx"
 date:   2016-04-06
-excerpt: "Minimal, one column Jekyll theme for your blog."
+excerpt: ""
 blog: true
 tags: [jekyll, moon]
 feature: ./assets/img/Learning%20Deep%20Features%20for%20Discriminative%20Localiza%20ffd1c68765ed4459900888d809ecdf7e/cam.png
