--- a/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
+++ b/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "local123asdzx"
-date:   2016-04-06
+title: "Learning Deep Features for Discriminative Localization"
+date:   2020-8-5
 excerpt: ""
-tags: [jekyll, moon]
-feature: ./assets/img/Learning%20Deep%20Features%20for%20Discriminative%20Localiza%20ffd1c68765ed4459900888d809ecdf7e/cam.png
+tags: [Object detection, image]
+feature: ../assets/img/Learning%20Deep%20Features%20for%20Discriminative%20Localiza%20ffd1c68765ed4459900888d809ecdf7e/cam.png 
 comments: true
 ---
 
