--- a/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
+++ b/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
@@ -24,6 +24,7 @@ a.visited {
 h1,
 h2,
 h3 {
+	padding: 5px, 0, 0, 0;
 	letter-spacing: -0.01em;
 	line-height: 1.2;
 	font-weight: 600;
@@ -224,9 +225,6 @@ ol {
 	padding-inline-start: 1.6em;
 }
 
-p {
-   display: block;
-}
 
 ol > li {
 	padding-left: 0.2em;
