--- a/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
+++ b/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
@@ -21,10 +21,14 @@ a.visited {
 	color: #444;
 }
 
+p {
+   line-height: 1.2;	
+}
+
 h1,
 h2,
 h3 {
-	padding: 5px, 0, 0, 0;
+	padding: 15px, 0, 0, 0;
 	letter-spacing: -0.01em;
 	line-height: 1.2;
 	font-weight: 600;
