--- a/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
+++ b/_posts/2020-8-5-Learning-Deep-Features-for-Discriminative-Localization.html
@@ -28,7 +28,7 @@ p {
 h1,
 h2,
 h3 {
-	padding: 15px, 0, 0, 0;
+	padding: 15px, 0px, 0px, 0px;
 	letter-spacing: -0.01em;
 	line-height: 1.2;
 	font-weight: 600;
