korean blog reupload

--- a/_posts/2020-6-6-파이참-서버-연결하기..html
+++ b/_posts/2020-6-6-파이참-서버-연결하기..html
@@ -5,7 +5,7 @@ date:   2020-6-6
 excerpt: ""
 blog: true
 tags: 
-feature: ../assets/img/%E1%84%91%E1%85%A1%E1%84%8B%E1%85%B5%E1%84%8E%E1%85%A1%E1%86%B7%20%E1%84%89%E1%85%A5%E1%84%87%E1%85%A5%20%E1%84%8B%E1%85%A7%E1%86%AB%E1%84%80%E1%85%A7%E1%86%AF%E1%84%92%E1%85%A1%E1%84%80%E1%85%B5%208e395e2ca0e047928c251c1f4d39c283.jpg 
+feature: ../assets/img/파이참 서버 연결하기 8e395e2ca0e047928c251c1f4d39c283 
 comments: true
 ---
 
